<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FTS Owner</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Cài đặt</string>
    <string name="title_activity_goods_fragment">GoodsFragment</string>
    <string name="title_activity_track_fragment">TrackFragment</string>
    <string name="action_logout">Đăng xuất</string>
    <string name="title_activity_goods_detail">Chi tiết hàng</string>
    <string name="action_create_goods">Đăng hàng</string>
    <string name="action_pay">Thanh toán</string>
    <string name="action_suggest_driver">Gợi ý lộ trình</string>
    <string name="action_send_deal">Gửi đề nghị</string>
    <string name="action_counter_deal">Trả giá đề nghị</string>
    <string name="action_accept_deal">Chấp nhận</string>
    <string name="action_decline_deal">Từ chối</string>
    <string name="action_cancel_deal">Hủy đề nghị</string>
    <string name="action_confirm_order">Xác nhận giao hàng</string>
    <string name="action_lost_order">Phản hồi đơn hàng</string>
    <string name="action_cancel_order">Hủy đơn hàng</string>
    <string name="title_activity_create_good_fragment">Tạo hàng</string>
    <string name="title_activity_create_goods">Tạo hàng</string>
    <string name="title_activity_information_fragment">InformationFragment</string>
    <string name="title_activity_deal_fragment">DealFragment</string>
    <string name="title_activity_suggest">Gợi ý lộ trình</string>
    <string name="title_activity_suggest_list_fragment">SuggestListFragment</string>
    <string name="title_activity_suggest_detail_fragment">SuggestDetailFragment</string>
    <string name="title_activity_create_goods_map_fragment">Chi tiết bản đồ</string>
    <string name="title_activity_login">Đăng nhập</string>
    <string name="prompt">Loại hàng</string>
    <string name="title_activity_suggest_detail">Thông tin lộ trình</string>
    <string name="title_activity_deal_detail">Thông tin giao dịch</string>
    <string name="action_history">Lịch sử</string>
    <string name="title_activity_order_detail">Thông tin đơn hàng</string>
    <string name="title_activity_history">Lịch sử giao dịch</string>
    <string name="action_call">Gọi tài xế</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_route_map">Lộ trình</string>
    <string name="title_activity_edit_goods_map">Bản đồ</string>
    <string name="title_activity_paypal">Thanh toán</string>

</resources>