<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="vn.edu.fpt.fts.ownerapp.OrderDetailActivity" >

    <item
        android:id="@+id/action_call"
        android:icon="@drawable/ic_action_call"
        android:showAsAction="ifRoom"
        android:title="@string/action_call"/>
    <item
        android:id="@+id/confirm_order"
        android:icon="@drawable/ic_action_good"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_confirm_order"/>
    <item
        android:id="@+id/lost_order"
        android:icon="@drawable/ic_action_bad"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_lost_order"/>

</menu>