<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ownerapp.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logout"/>
    <item
        android:id="@+id/create_goods"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_create_goods"/>
    <item
        android:id="@+id/action_homepage"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_homepage"/>

</menu>
